--- a/styles/cssComponents/nav.scss
+++ b/styles/cssComponents/nav.scss
@@ -299,3 +299,7 @@
     }
   }
 }
+
+.increase-font-size {
+  font-size: 1.8rem;
+}
