--- a/styles/pages/login.scss
+++ b/styles/pages/login.scss
@@ -49,12 +49,8 @@
         outline: none;
         margin-left: 1rem;
         font-size: 1.6rem;
-        width: 25rem;
+        width: 100%;
         padding: 1rem 1rem;
-
-        @media only screen and (max-width: $extra-small) {
-          width: 15rem;
-        }
       }
     }
 
